Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -19,39 +19,17 @@ author  : "pshung"
 * addRegBankSelect
 * addGlobalInstructionSelect
 
-# IRTranslator, transform LLVM IR to Machine IR.
+Example: a simple function takes an input argument, increment one and return
+
 LLVM IR:
-include/llvm/IR/Instruction.def 
-## Intoruce generic machine instruction to fill the gap between llvm IR and target instruction.
-include/llvm/Support/TargetOpcodes.def 
-include/llvm/CodeGen/TargetOpcodes.h 
-Introduce the same generic opcode as SelectionDAG SDNode
-
-##LLVM IR type to EVT
-include/llvm/CodeGen/ValueTypes.h 
-EVT:
->// This file defines the set of low-level target independent types which various
-// values in the code generator are.  This allows the target specific behavior
-// of instructions to be described to target independent passes.
-/// Extended Value Type. Capable of holding value types which are not native
-/// for any processor (such as the i12345 type), as well as the types an MVT
-/// can represent.
-
-##Generic virtual register
-Virtual register with size information needed for register bank selection
-
-lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall) so that 
-* lowerFormalArguments:
-  * split LLVM IR type to EVT
-  * create generic machine instructions to copy the physical registers into virtual registers with EVT.
-  
 ```
 define i64 @inc(i64 %a)  {
   %1 = add nsw i64 %a, 1
   ret i64 %1
 }
 ```
-llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
+LLVM IR to Generic Machine Instruction (G_ADD) and Generic Virtual Register(with a size, s64, scalar 64 bits)
+>llc --global-isel -march=riscv64 test.ll -o test.mir -stop-after=irtranslator
 ```
     %0:_(s64) = COPY $x10_64
     %1:_(s64) = G_CONSTANT i64 1
@@ -59,9 +37,9 @@ llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=irtranslator
     $x10_64 = COPY %2(s64)
     Ret implicit $x10_64
 ```
-All operation operates on generate virtual registers, so create generic virtual register on constant.
 
-llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
+Legalization Generic Machine Instruction
+>llc --global-isel -march=Rriscv64 test.ll -o test.mir -stop-after=legalizer
 ```
     %0:_(s64) = COPY $x10_64
     %1:_(s64) = G_CONSTANT i64 1
@@ -70,7 +48,8 @@ llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=legalizer
     Ret implicit $x10_64
 
 ```
-llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
+Choose register bank for the generic virtual registers, 'gpr' register bank for this case
+>llc --global-isel -march=riscv64 test.ll -o test.mir -stop-after=regbankselect
 ```
     %0:gpr(s64) = COPY $x10_64
     %1:gpr(s64) = G_CONSTANT i64 1
@@ -79,15 +58,20 @@ llc --global-isel -march=RISCV64 test.ll -o test.mir -stop-after=regbankselect
     Ret implicit $x10_64
 
 ```
-llvm-tblgen -gen-global-isel RISCV.td -Ipath/to/llvm/include/ --stats
-shows the states of importing patterns from SelectionDAG.
 
-llc --global-isel -march=RISCV64 test.ll -o test.s -stop-after=instruction-select
+Lower Generic machine instruction to machine instruction with target-opcode (ADDI)
+>llc --global-isel -march=riscv64 test.ll -o test.s -stop-after=instruction-select
 ```
     %0:gpr64 = COPY $x10_64
     %2:gpr64 = ADDI %0, 1
     $x10_64 = COPY %2
     Ret implicit $x10_64
 
+```
+Generate target assembly code.
+>llc --global-isel -march=riscv64 test.ll -o test.s
+```
+  addi  a0, a0, #1
+  ret
 ```
 
