Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -22,20 +22,23 @@ Value: base class represents operands that can be used by instructions. (includi
 It keeps track of a list of users to form a def-use chain.  
 User is a class that can refer to values. (including function, instruction). It exposes a list of operands that the user is referring to. The operand of a users directly points to the value definition. Since LLVM uses the SSA form, this provides the use-def information in llvm.  
 
+LLVM IR:  
+include/llvm/IR/Instruction.def   
+
 # Machine instructions
 [LLVM Machine Code Representation](https://llvm.org/docs/CodeGenerator.html#id21)  
 
 # New Generic Machine IR
+Introduce the same generic opcode as SelectionDAG SDNode.  
+include/llvm/Support/TargetOpcodes.def  
+include/llvm/CodeGen/TargetOpcodes.h  
 
 # New Low Level Type
 
 # IRTranslator, transform LLVM IR to Machine IR.
-LLVM IR:  
-include/llvm/IR/Instruction.def   
+
 ## Intoruce generic machine instruction to fill the gap between llvm IR and target instruction.  
-include/llvm/Support/TargetOpcodes.def  
-include/llvm/CodeGen/TargetOpcodes.h  
-Introduce the same generic opcode as SelectionDAG SDNode  
+
 
 ##LLVM IR type to EVT  
 include/llvm/CodeGen/ValueTypes.h  
@@ -50,7 +53,9 @@ EVT:
 ##Generic virtual register
 Virtual register with size information needed for register bank selection  
 
-lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall) so that 
-* lowerFormalArguments:
-  * split LLVM IR type to EVT
-  * create generic machine instructions to copy the physical registers into virtual registers with EVT.
+## CallLowering
+IR Translator uses CallLowering information to lower LLVM IR at ABI boundaries.  
+lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall)  
+* lowerFormalArguments:  
+  * split LLVM IR type to EVT  
+  * create generic machine instructions to copy the physical registers into virtual registers with EVT.  
