Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -23,60 +23,149 @@ Example: a simple function takes an input argument, increment one and return
 
 LLVM IR:
 ```
-define i64 @inc(i64 %a)  {
-  %1 = add nsw i64 %a, 1
-  ret i64 %1
+define i32 @addi(i32 %a) nounwind {
+  %1 = add i32 %a, %a
+  ret i32 %1
 }
 ```
-LLVM IR to Generic Machine Instruction (G_ADD) and Generic Virtual Register(with a size, s64, scalar 64 bits)
->llc --global-isel -march=riscv64 test.ll -o test.mir -stop-after=irtranslator
+Translate LLVM IR to Generic Machine Instruction.
+>llc --global-isel -march=riscv32  add.ll -o test.s  -stop-after=irtranslator -verify-machineinstrs
+```
+    %0:_(s32) = COPY $x10_32
+    %1:_(s32) = G_ADD %0, %0
+    $x10_32 = COPY %1(s32)
+    Ret implicit $x10_32
 
 ```
-    %0:_(s64) = COPY $x10_64
-    %1:_(s64) = G_CONSTANT i64 1
-    %2:_(s64) = G_ADD %0, %1
-    $x10_64 = COPY %2(s64)
-    Ret implicit $x10_64
-```
 
-Legalization Generic Machine Instruction
->llc --global-isel -march=Rriscv64 test.ll -o test.mir -stop-after=legalizer
-
+Legalize Generic Machine Instruction
+>llc --global-isel -march=riscv32  add.ll -o test.s  -stop-after=legalizer -verify-machineinstrs
 ```
-    %0:_(s64) = COPY $x10_64
-    %1:_(s64) = G_CONSTANT i64 1
-    %2:_(s64) = G_ADD %0, %1
-    $x10_64 = COPY %2(s64)
-    Ret implicit $x10_64
+    %0:_(s32) = COPY $x10_32
+    %1:_(s32) = G_ADD %0, %0
+    $x10_32 = COPY %1(s32)
+    Ret implicit $x10_32
+
 
 ```
 Choose register bank for the generic virtual registers, 'gpr' register bank for this case
->llc --global-isel -march=riscv64 test.ll -o test.mir -stop-after=regbankselect
+>llc --global-isel -march=riscv32  add.ll -o test.s  -stop-after=regbankselect -verify-machineinstrs
+```
+    %0:gpr(s32) = COPY $x10_32
+    %1:gpr(s32) = G_ADD %0, %0
+    $x10_32 = COPY %1(s32)
+    Ret implicit $x10_32
+
 
 ```
-    %0:gpr(s64) = COPY $x10_64
-    %1:gpr(s64) = G_CONSTANT i64 1
-    %2:gpr(s64) = G_ADD %0, %1
-    $x10_64 = COPY %2(s64)
-    Ret implicit $x10_64
 
+Select Generic machine instruction (G_ADD) to machine instruction with target-opcode (ADD)
+>llc --global-isel -march=riscv32  add.ll -o test.s  -stop-after=instruction-select -verify-machineinstrs
 ```
-
-Lower Generic machine instruction to machine instruction with target-opcode (ADDI)
->llc --global-isel -march=riscv64 test.ll -o test.s -stop-after=instruction-select
-
-```
-    %0:gpr64 = COPY $x10_64
-    %2:gpr64 = ADDI %0, 1
-    $x10_64 = COPY %2
-    Ret implicit $x10_64
-
+    %0:gpr32 = COPY $x10_32
+    %1:gpr32 = ADD %0, %0
+    $x10_32 = COPY %1
+    Ret implicit $x10_32
 ```
 Generate target assembly code.
->llc --global-isel -march=riscv64 test.ll -o test.s
+>llc --global-isel -march=riscv32 test.ll -o test.s -verify-machineinstrs
+```
+addi:                                   ; @addi
+  add a0, a0, a0
+  ret
 
 ```
-  addi  a0, a0, #1
-  ret
+
+# IRTranslator
+Using CallLowering to provide information on how to lower code at ABI boundary.
+* lowerCall
+* lowerReturn
+* lowerFormalArguments
+
+# LLVM IR
+[LLVM language specification](https://llvm.org/docs/LangRef.html)  
+[LLVM core classes of IR](http://llvm.org/docs/ProgrammersManual.html#the-core-llvm-class-hierarchy-reference)  
+LLVMContext: an important class to use llvm in a threaded context. It manages core global datas in llvm.  
+Derived type: only one instance at a time to assure type equality.  
+
+What are first class type? (Operands with the first class types can be used as operands of instructions)(Values of these types are the only ones which can be produced by instructions.)  
+e.g., integer, label, function, pointer, vector  
+What are not?
+Array is not a first class type.  
+
+Module: consist of functions and global varaibles and a symbol table.  
+Value: base class represents operands that can be used by instructions. (including function, integer, instruction etc)  
+It keeps track of a list of users to form a def-use chain.  
+User is a class that can refer to values. (including function, instruction). It exposes a list of operands that the user is referring to. The operand of a users directly points to the value definition. Since LLVM uses the SSA form, this provides the use-def information in llvm.  
+
+LLVM IR:  
+include/llvm/IR/Instruction.def   
+
+# Machine instructions
+[LLVM Machine Code Representation](https://llvm.org/docs/CodeGenerator.html#id21)  
+
+# New Generic Machine IR
+Introduce the same generic opcode as SelectionDAG SDNode.  
+include/llvm/Support/TargetOpcodes.def  
+include/llvm/CodeGen/TargetOpcodes.h  
+
+##Lower LLVM IR type to target representable EVT types (1 to many)  
+include/llvm/CodeGen/ValueTypes.h  
+EVT:  
+>// This file defines the set of low-level target independent types which various
+// values in the code generator are.  This allows the target specific behavior
+// of instructions to be described to target independent passes.
+/// Extended Value Type. Capable of holding value types which are not native
+/// for any processor (such as the i12345 type), as well as the types an MVT
+/// can represent.
+
+##Generic virtual register
+Virtual register with size information needed for register bank selection  
+
+## CallLowering
+IR Translator uses CallLowering information to lower LLVM IR at ABI boundaries.  
+lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall)  
+* lowerFormalArguments:  
+  * split LLVM IR type to EVT  
+  * create generic machine instructions to copy the physical registers into virtual registers with EVT.  
+
+# Legalizer
+Specify what generic machine instruction types are legal for target instruction.
+What is legal? "selectable instruction type with legal operand type." 
+If it's illegal, tell legalizer how to deal with them. (widen scalar, expand operation etc)
+
 ```
+  for (auto opcode :
+       {G_ADD, G_SUB, G_AND, G_OR, G_XOR, G_SHL, G_LSHR, G_ASHR}) {
+    getActionDefinitionsBuilder(opcode).legalFor({s32});
+  }
+
+```
+G_ADD is legal with operand of scalar 32-bit type.
+
+# Register Bank Selection
+For each operand of each instruction, assigning a virtual register a register bank.
+
+# Instruction Selection
+Select GMI(with pre-isel opcode) to MI (with target opcode).
+Importing SelectionDAG rules to match instruction.
+
+Call selectImpl to hanlde importable instructions (a state machine to guide the matching process) or customize the selection.
+
+>llvm-tblgen -gen-global-isel RISCV.td -I/path/to/llvm/include/ --stats
+
+>15 gisel-emitter - Number of patterns emitted
+15 gisel-emitter - Number of patterns imported from SelectionDAG
+**2 gisel-emitter - Number of SelectionDAG imports skipped**
+17 gisel-emitter - Total number of patterns
+
+
+>llvm-tblgen -gen-global-isel RISCV.td -I/path/to/llvm/include/ --warn-on-skipped-patterns
+
+>RISCVInstrInfo.td:62:1: warning: Skipped pattern: Pattern operator lacks an equivalent Instruction (ISD::SETCC)
+def : Pat<(setcc GPR32:$rs1, GPR32:$rs2, SETLT), (SLT GPR32:$rs1, GPR32:$rs2)>;
+^
+Included from RISCV.td:44:
+RISCVInstrInfo.td:63:1: warning: Skipped pattern: Pattern operator lacks an equivalent Instruction (ISD::SETCC)
+def : Pat<(setcc GPR32:$rs1, GPR32:$rs2, SETULT), (SLTU GPR32:$rs1, GPR32:$rs2)>;
 
