Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -1,61 +1,6 @@
 ---
 layout  : page
-title   : "LLVM RISC-V #3: Global Instruction Selection: IRTranslator"
+title   : "LLVM RISC-V #3: Global Instruction Selection: Detail"
 date    : 2018-08-31
 author  : "pshung"
 ---
-
-
-# LLVM IR
-[LLVM language specification](https://llvm.org/docs/LangRef.html)  
-[LLVM core classes of IR](http://llvm.org/docs/ProgrammersManual.html#the-core-llvm-class-hierarchy-reference)  
-LLVMContext: an important class to use llvm in a threaded context. It manages core global datas in llvm.  
-Derived type: only one instance at a time to assure type equality.  
-
-What are first class type? (Operands with the first class types can be used as operands of instructions)(Values of these types are the only ones which can be produced by instructions.)  
-e.g., integer, label, function, pointer, vector  
-What are not?
-Array is not a first class type.  
-
-Module: consist of functions and global varaibles and a symbol table.  
-Value: base class represents operands that can be used by instructions. (including function, integer, instruction etc)  
-It keeps track of a list of users to form a def-use chain.  
-User is a class that can refer to values. (including function, instruction). It exposes a list of operands that the user is referring to. The operand of a users directly points to the value definition. Since LLVM uses the SSA form, this provides the use-def information in llvm.  
-
-LLVM IR:  
-include/llvm/IR/Instruction.def   
-
-# Machine instructions
-[LLVM Machine Code Representation](https://llvm.org/docs/CodeGenerator.html#id21)  
-
-# New Generic Machine IR
-Introduce the same generic opcode as SelectionDAG SDNode.  
-include/llvm/Support/TargetOpcodes.def  
-include/llvm/CodeGen/TargetOpcodes.h  
-
-# New Low Level Type
-
-# IRTranslator, transform LLVM IR to Machine IR.
-
-## Intoruce generic machine instruction to fill the gap between llvm IR and target instruction.  
-
-
-##LLVM IR type to EVT  
-include/llvm/CodeGen/ValueTypes.h  
-EVT:  
->// This file defines the set of low-level target independent types which various
-// values in the code generator are.  This allows the target specific behavior
-// of instructions to be described to target independent passes.
-/// Extended Value Type. Capable of holding value types which are not native
-/// for any processor (such as the i12345 type), as well as the types an MVT
-/// can represent.
-
-##Generic virtual register
-Virtual register with size information needed for register bank selection  
-
-## CallLowering
-IR Translator uses CallLowering information to lower LLVM IR at ABI boundaries.  
-lower ABI boundary, target implements three hooks (lowerReturn, lowerFormalArguments, lowerCall)  
-* lowerFormalArguments:  
-  * split LLVM IR type to EVT  
-  * create generic machine instructions to copy the physical registers into virtual registers with EVT.  
