Saved 2018-08-27-LLVM-RISCV-2.md with Dillinger.io

--- a/_posts/2018-08-27-LLVM-RISCV-2.md
+++ b/_posts/2018-08-27-LLVM-RISCV-2.md
@@ -153,20 +153,10 @@ Importing SelectionDAG rules to match instruction.
 
 Call selectImpl to hanlde importable instructions (a state machine to guide the matching process) or customize the selection.
 
+show the importing status  
 >llvm-tblgen -gen-global-isel RISCV.td -I/path/to/llvm/include/ --stats
 
->15 gisel-emitter - Number of patterns emitted
-15 gisel-emitter - Number of patterns imported from SelectionDAG
-**2 gisel-emitter - Number of SelectionDAG imports skipped**
-17 gisel-emitter - Total number of patterns
-
-
+give warning on skipped pattern.  
 >llvm-tblgen -gen-global-isel RISCV.td -I/path/to/llvm/include/ --warn-on-skipped-patterns
 
->RISCVInstrInfo.td:62:1: warning: Skipped pattern: Pattern operator lacks an equivalent Instruction (ISD::SETCC)
-def : Pat<(setcc GPR32:$rs1, GPR32:$rs2, SETLT), (SLT GPR32:$rs1, GPR32:$rs2)>;
-^
-Included from RISCV.td:44:
-RISCVInstrInfo.td:63:1: warning: Skipped pattern: Pattern operator lacks an equivalent Instruction (ISD::SETCC)
-def : Pat<(setcc GPR32:$rs1, GPR32:$rs2, SETULT), (SLTU GPR32:$rs1, GPR32:$rs2)>;
 
