Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -7,8 +7,11 @@ author  : "pshung"
 
 
 # LLVM RISC-V with global instruction selection.
-
+ 1. [Register, TargetMachine and Code Generation Pipeline](https://pshung.github.io/2018/08/24/LLVM-RISCV-1/)
+ 2. [Global Instruction Selection](https://pshung.github.io/2018/08/27/LLVM-RISCV-2/)
+ 
 # LLD
+  [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
 
 # NNVM(TVM)
 
