Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -4,3 +4,61 @@ title   : "LLVM RISC-V #3: Global Instruction Selection: Detail"
 date    : 2018-08-31
 author  : "pshung"
 ---
+# Case 1
+```
+define i32 @sltu(i32 %a, i32 %b) nounwind {
+; CHECK-LABEL: sltu:
+; CHECK:       # %bb.0:
+; CHECK-NEXT:    sltu a0, a0, a1
+; CHECK-NEXT:    ret
+  %1 = icmp ult i32 %a, %b
+  %2 = zext i1 %1 to i32
+  ret i32 %2
+}
+```
+
+# Select G_ICMP LT/ULT
+G_ICMP is legal for {s1, s32} pair of type.
+Pattern of SelectionDAG of setcc is not compatiable with GSel.  
+We select it with code.  
+map to RISC-V slts (LT predicate code) and slt (ULT predicate code)  
+
+# Select G_ZEXT
+Select it with code.
+map to RISC-V andi %x, 1
+
+# Output
+```
+  slt a0, a0, a1
+  andi  a0, a0, #1
+  ret
+```
+
+# Can we combine G_ICMP and G_ZEXT?
+TODO: combineInfo.
+
+# Case 2
+```
+define i32 @slti(i32 %a) nounwind {
+; RV32I-LABEL: slti:
+; RV32I:       # %bb.0:
+; RV32I-NEXT:    slti a0, a0, 2
+; RV32I-NEXT:    ret
+  %1 = icmp slt i32 %a, 2
+  %2 = zext i1 %1 to i32
+  ret i32 %2
+}
+
+```
+
+# Select G_CONSTANT?
+G_CONSTANT can be mapped to addi x0, imm, but can we select G_CONSTANT and G_ICMP into single slti?  
+TableGen for SelectionDAG can perform this kind of selection automatically. How does it do it?  
+
+In RISCVGenGlobalISel.inc, there is a match table used to guide the statemachine of matching process.
+Matching logical: InstructionSelectorImpl.h InstructionSelector::executeMatchTable  
+Matching instruction: MatchTable0.
+Take addi as an example:  
+Rule: When matching G_ADD, also matching the next MI if it's G_CONSTANT then select to ADDI.  
+
+
