Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -13,5 +13,8 @@ author  : "pshung"
 # LLD
   [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
 
-# NNVM(TVM)
+# Arch Linux on Raspberry Pi 3b+
+  [environment setting]
+
+# 
 
