Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -14,7 +14,7 @@ author  : "pshung"
   [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
 
 # Arch Linux on Raspberry Pi 3b+
-  [environment setting]
+  * [Rnvironment setting](https://pshung.github.io/2019/09/17/Arch-Env-Setting/)
 
 # 
 
