Saved 2018-09-20-Docker.md with Dillinger.io

--- a/_posts/2018-09-20-Docker.md
+++ b/_posts/2018-09-20-Docker.md
@@ -4,9 +4,15 @@ title   : "Docker"
 date    : 2019-09-20
 author  : "pshung"
 ---
+# Introduction
+[Reference:](http://www.ruanyifeng.com/blog/2018/02/docker-tutorial.html)
 
 # Image and Container
-
 # Compare Docker and Virtual Machine
+[Reference:](https://docs.docker.com/get-started/#images-and-containers)
+
+# Enable and start docker.service
+systemctl start docker.service  # start the deamon right now.
+systemctl enable docker.service # start the deamon when the system restarts.
 
 
