Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -4,7 +4,13 @@ title   : "LLVM RISC-V #3: Global Instruction Selection: Detail"
 date    : 2018-08-31
 author  : "pshung"
 ---
-# Case 1
+# ALU instruction
+Most ALU instructions can be matched by tablegen.  
+Only G_ICMP cannot be matched.  
+Consider G_ICMP with (unsigned) less than condition code.  
+It can be mapped to slt and slts.  
+
+# Case
 ```
 define i32 @sltu(i32 %a, i32 %b) nounwind {
 ; CHECK-LABEL: sltu:
@@ -33,11 +39,7 @@ map to RISC-V andi %x, 1
   andi  a0, a0, #1
   ret
 ```
-
-# Can we combine G_ICMP and G_ZEXT?
-TODO: combineInfo.
-
-# Case 2
+# Example 2
 ```
 define i32 @slti(i32 %a) nounwind {
 ; RV32I-LABEL: slti:
@@ -52,6 +54,7 @@ define i32 @slti(i32 %a) nounwind {
 ```
 
 # Select G_CONSTANT?
+
 G_CONSTANT can be mapped to addi x0, imm, but can we select G_CONSTANT and G_ICMP into single slti?  
 TableGen for SelectionDAG can perform this kind of selection automatically. How does it do it?  
 
@@ -59,6 +62,8 @@ In RISCVGenGlobalISel.inc, there is a match table used to guide the statemachine
 Matching logical: InstructionSelectorImpl.h InstructionSelector::executeMatchTable  
 Matching instruction: MatchTable0.
 Take addi as an example:  
-Rule: When matching G_ADD, also matching the next MI if it's G_CONSTANT then select to ADDI.  
+Rule: When matching G_ADD, also matching the definition instruction of the second operand, if it's G_CONSTANT then select to ADDI.  
 
+TODO: Combine G_ICMP and G_ZEXT.  
+TODO: Combine G_CONSTANT and G_ICMP.  
 
