Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -67,3 +67,4 @@ Rule: When matching G_ADD, also matching the definition instruction of the secon
 TODO: Combine G_ICMP and G_ZEXT.  
 TODO: Combine G_CONSTANT and G_ICMP.  
 
+# Memory Load/Store Instructions
