Saved 2018-08-32-LLVM-RISCV-3.md with Dillinger.io

--- a/_posts/2018-08-32-LLVM-RISCV-3.md
+++ b/_posts/2018-08-32-LLVM-RISCV-3.md
@@ -68,3 +68,13 @@ TODO: Combine G_ICMP and G_ZEXT.
 TODO: Combine G_CONSTANT and G_ICMP.  
 
 # Memory Load/Store Instructions
+
+# Branch Instructions
+
+# C/C++ control structure
+## if-else
+## switch
+## for loop
+## while/do-while
+## Function Pointer
+## Function Call
