Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -9,12 +9,14 @@ author  : "pshung"
 # LLVM RISC-V with global instruction selection.
  1. [Register, TargetMachine and Code Generation Pipeline](https://pshung.github.io/2018/08/24/LLVM-RISCV-1/)
  2. [Global Instruction Selection](https://pshung.github.io/2018/08/27/LLVM-RISCV-2/)
- 
+ 3. [Global Instruction Selection in detail](https://pshung.github.io/2018/08/31/LLVM-RISCV-3/)
 # LLD
   [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
 
 # Arch Linux on Raspberry Pi 3b+
   * [Rnvironment setting](https://pshung.github.io/2019/09/17/Arch-Env-Setting/)
 
-# 
+# Docker
+ [Note](https://pshung.github.io/2018/09/20/Docker/)
+  
 
