Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -10,8 +10,8 @@ author  : "pshung"
  1. [Register, TargetMachine and Code Generation Pipeline](https://pshung.github.io/2018/08/24/LLVM-RISCV-1/)
  2. [Global Instruction Selection](https://pshung.github.io/2018/08/27/LLVM-RISCV-2/)
  3. [Global Instruction Selection for ALU instructions](https://pshung.github.io/2018/08/31/LLVM-RISCV-3/)
- 4. [Global Instruction Selection for load/store instructions]
- 5. [Global Instruction Selection for C-family control structure]
+ 4. [Global Instruction Selection for load/store instructions](https://pshung.github.io/2018/09/20/LLVM-RISCV-4/)
+ 5. [Global Instruction Selection for C-family control structure](https://pshung.github.io/2018/09/21/LLVM-RISCV-5/)
 # LLD
   [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
 
