Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -22,5 +22,11 @@ author  : "pshung"
  [Note](https://pshung.github.io/2018/09/20/Docker/)
   
 # NN compilers
-
+Glow, TVM, ONNC  
+[Note:](https://pshung.github.io/2018/09/21/NN-compilers/)
 # DL frameworks
+ONNX, Caffe2  
+[Note:](https://pshung.github.io/2018/09/21/NN-framework/)
+# DL hardware
+TPU  
+[Note:](https://pshung.github.io/2018/09/21/NN-HW/)
