--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -30,5 +30,8 @@ TPU
 # Arch Linux on Raspberry Pi 3b+
   * [Rnvironment setting](https://pshung.github.io/2019/09/17/Arch-Env-Setting/)
 
+# Compiler
+[Register allocation](https://pshung.github.io/2018/10/26/Register-allocation/)
+
 # Docker
  [Note](https://pshung.github.io/2018/09/20/Docker/)
