Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -22,9 +22,11 @@ Glow, TVM, ONNC
 # DL frameworks
 ONNX, Caffe2  
 [Note:](https://pshung.github.io/2018/09/21/NN-framework/)
-# DL hardware
-TPU  
-[Note:](https://pshung.github.io/2018/09/21/NN-HW/)
+
+# Architecture
+ [Fixed pointer representation](http://www-inst.eecs.berkeley.edu/~cs61c/sp06/handout/fixedpt.html)
+ Using integer representation to represent real number with fractional numbers. No extra floating hardwared is needed, but the precision of fractional part and the range of integer part are limited by the position of binary point. For example, fixed<15,16> is capable of representing the fractional number of 15 digits and integer range of -2^15 to 2^15-1.    
+ 
 
 
 # Arch Linux on Raspberry Pi 3b+
