--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -5,36 +5,10 @@ date    : 2019-08-27
 author  : "pshung"
 ---
 
-
-# LLVM RISC-V with global instruction selection.
- 1. [Register, TargetMachine and Code Generation Pipeline](https://pshung.github.io/2018/08/24/LLVM-RISCV-1/)
- 2. [Global Instruction Selection](https://pshung.github.io/2018/08/27/LLVM-RISCV-2/)
- 3. [Global Instruction Selection for ALU instructions](https://pshung.github.io/2018/08/31/LLVM-RISCV-3/)
- 4. [Global Instruction Selection for load/store instructions](https://pshung.github.io/2018/09/20/LLVM-RISCV-4/)
- 5. [Global Instruction Selection for C-family control structure](https://pshung.github.io/2018/09/21/LLVM-RISCV-5/)
-
-# LLD
-  [Code Trace](https://pshung.github.io/2018/08/29/LLD/)
-
-# NN compilers
-Glow, TVM, ONNC  
-[Note:](https://pshung.github.io/2018/09/21/NN-compilers/)
-# DL frameworks
-ONNX, Caffe2  
-[Note:](https://pshung.github.io/2018/09/21/NN-framework/)
-
-# Architecture
- [Fixed pointer representation](http://www-inst.eecs.berkeley.edu/~cs61c/sp06/handout/fixedpt.html)
- Using integer representation to represent real number with fractional numbers. No extra floating hardwared is needed, but the precision of fractional part and the range of integer part are limited by the position of binary point. For example, fixed<15,16> is capable of representing the fractional number of 15 digits and integer range of -2^15 to 2^15-1.    
- 
-
-
-# Arch Linux on Raspberry Pi 3b+
-  * [Rnvironment setting](https://pshung.github.io/2019/09/17/Arch-Env-Setting/)
+# AI
 
 # Compiler
-[Register allocation](https://pshung.github.io/2018/10/26/Register-allocation/)
+
+# Computer Misc.
 
 
-# Docker
- [Note](https://pshung.github.io/2018/09/20/Docker/)
