Saved 2019-08-07-All.md with Dillinger.io

--- a/_posts/2019-08-07-All.md
+++ b/_posts/2019-08-07-All.md
@@ -5,10 +5,8 @@ date    : 2019-08-27
 author  : "pshung"
 ---
 
-# AI
-
-# Compiler
-
-# Computer Misc.
+# [AI](https://pshung.github.io/2018/10/26/AI/)
+# [Compiler](https://pshung.github.io/2018/10/26/compiler/)
+# [Computer Misc.](https://pshung.github.io/2018/10/26/misc/)
 
 
