Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -4,4 +4,6 @@ title   : "AI"
 date    : 2018-10-26
 author  : "pshung"
 ---
-## AI
+## 2018-12-06
+[Grouped convolution](https://blog.yani.io/filter-group-tutorial/)
+Divide number of channel into N groups, perform convoltuion on individual group, then concantnate the result.  
