Saved 2018-12-05-English.md with Dillinger.io

--- a/_posts/2018-12-05-English.md
+++ b/_posts/2018-12-05-English.md
@@ -4,3 +4,8 @@ title   : "English"
 date    : 2018-10-26
 author  : "pshung"
 ---
+
+# Top: Introduce Yourself.
+
+# Top: What are your strength and weakness?
+
