--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -7,3 +7,11 @@ author  : "pshung"
 ## 2018-12-06
 [Grouped convolution](https://blog.yani.io/filter-group-tutorial/)
 Divide number of channel into N groups, perform convoltuion on individual group, then concantnate the result.  
+
+## 2018-12-07
+[8-Bit Quantization and TensorFlow Lite: Speeding up mobile inference with low precision](https://heartbeat.fritz.ai/8-bit-quantization-and-tensorflow-lite-speeding-up-mobile-inference-with-low-precision-a882dfcafbbd)
+
+paper: Eyeriss: An Energy-Efficient Reconfigurable Accelerator for Deep Convolutional Neural Networks   
+paper: Eyeriss v2: A Flexible and High-Performance Accelerator for Emerging Deep Neural Networks    
+# Batch Normalization:
+adjust the input value of activation function so that the input values can scatter averagely rather than scatter in the saturation region. (e.g. tanh: -1 to 1)
