Saved 2018-12-05-misc.md with Dillinger.io

--- a/_posts/2018-12-05-misc.md
+++ b/_posts/2018-12-05-misc.md
@@ -5,3 +5,5 @@ date    : 2018-10-26
 author  : "pshung"
 ---
 ## Computer MISC.
+
+# [Basic Data structure](http://alrightchiu.github.io/SecondRound/)
