--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -18,7 +18,7 @@ adjust the input value of activation function so that the input values can scatt
 
 # 2018-12-17
 [Halide language] (https://scitechdaily.com/halide-a-new-and-improved-programming-language-for-image-processing-software/)
-A new programming language for image processing. The key to the language is to separate the algorithm from the schedule. Let Halide compiler generates the optimized code instead of the hand-written optimized code which is usually unreadable and unmodifiable.  
+A new programming language for image processing. The key to the language is to separate the algorithm from the optimization (also called schedule). Let Halide compiler generates the optimized code instead of the hand-written optimized code which is usually unreadable and unmodifiable.  
 
 [Fast Image Processing using Halide](https://www.highperformancegraphics.org/wp-content/uploads/2017/Special-Session/HPG2017_FastImageProcessing.pdf)
 [Halide talk](https://www.youtube.com/watch?v=3uiEyEKji0M)
