Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -22,3 +22,9 @@ A new programming language for image processing. The key to the language is to s
 
 [Fast Image Processing using Halide](https://www.highperformancegraphics.org/wp-content/uploads/2017/Special-Session/HPG2017_FastImageProcessing.pdf)
 [Halide talk](https://www.youtube.com/watch?v=3uiEyEKji0M)
+*operation fusion to improve the cache locality, but fusion is a tradeoff among locality, recomputation, and pallelism.
+
+# 2018-12-18
+*Relay: version 2.0 of NNVM in TVM, a high-level intermidiate representation.
+[RCF](https://github.com/dmlc/tvm/issues/1673)
+[Paper](https://dl.acm.org/citation.cfm?id=3211348)
