Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -28,3 +28,4 @@ A new programming language for image processing. The key to the language is to s
 *Relay: version 2.0 of NNVM in TVM, a high-level intermidiate representation.
 [RCF](https://github.com/dmlc/tvm/issues/1673)
 [Paper](https://dl.acm.org/citation.cfm?id=3211348)
+[Introduction](https://docs.tvm.ai/dev/relay_intro.html)
