Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -29,3 +29,7 @@ A new programming language for image processing. The key to the language is to s
 [RCF](https://github.com/dmlc/tvm/issues/1673)
 [Paper](https://dl.acm.org/citation.cfm?id=3211348)
 [Introduction](https://docs.tvm.ai/dev/relay_intro.html)
+
+
+#2018-12-20
+[unofficial open source NVDLA compiler](https://github.com/icubecorp/nvdla_compiler)
