Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -36,3 +36,6 @@ A new programming language for image processing. The key to the language is to s
 *NVDLA doesn't have plan to release the source code of their compiler, but they will provide customizable compiler for user to add new hardward layers. [ref](https://github.com/nvdla/sw/issues/104)
 
 *[Tutorial on Hardware Architectures for Deep Neural Networks](http://eyeriss.mit.edu/tutorial.html)
+
+#2018-12-21
+[DNN Accelerator Architecture – SIMD or Systolic?](https://www.sigarch.org/dnn-accelerator-architecture-simd-or-systolic/)
