--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -39,3 +39,4 @@ A new programming language for image processing. The key to the language is to s
 
 #2018-12-21
 [DNN Accelerator Architecture – SIMD or Systolic?](https://www.sigarch.org/dnn-accelerator-architecture-simd-or-systolic/)
+* An Analytic Model for Cost-Benefit Analysis of Dataflows in DNN Accelerators
