--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -40,3 +40,34 @@ A new programming language for image processing. The key to the language is to s
 #2018-12-21
 [DNN Accelerator Architecture – SIMD or Systolic?](https://www.sigarch.org/dnn-accelerator-architecture-simd-or-systolic/)
 * An Analytic Model for Cost-Benefit Analysis of Dataflows in DNN Accelerators
+
+#2019-01-11
+Install anaconda to control package management and create a virtual environment. (install tensorflow)
+downalod an appropriate anaconda
+```bash
+bash Anaconda2-2018.12-Linux-x86_64.sh
+conda create -n tensorflow  # create a virtual environment
+source activate tensorflow # activate it.
+conda install numpy
+conda install tensorflow
+```
+[reference](https://medium.com/@margaretmz/anaconda-jupyter-notebook-tensorflow-and-keras-b91f381405f8)
+
+enable jupyter auto-complete
+```bash
+ipython profile create
+#edit config file
+c.Completer.greedy = True
+```
+
+connect remote jupyter notebook
+remote:
+```
+jupyter notebook --no-browser --port=8889
+```
+local:
+1.Using putty to create a ssh connect with tunnel enabled. Set source port  as 8888, set destination as localhost:8889, "ADD the setting", then connent and login.  
+2.creat a brower to connet localhost:8888  
+3.input the token shown in the remote connection  
+
+
