Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -55,12 +55,13 @@ conda install tensorflow
 
 enable jupyter auto-complete
 ```bash
+#generate a config file
 ipython profile create
-#edit config file
+#edit the config file
 c.Completer.greedy = True
 ```
 
-connect remote jupyter notebook
+connect to remote jupyter notebook
 remote:
 ```
 jupyter notebook --no-browser --port=8889
