Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -50,6 +50,7 @@ conda create -n tensorflow  # create a virtual environment
 source activate tensorflow # activate it.
 conda install numpy
 conda install tensorflow
+conda install pytorch-nightly-cpu -c pytorch  # install caffe2 without GPU (cpu only)
 ```
 [reference](https://medium.com/@margaretmz/anaconda-jupyter-notebook-tensorflow-and-keras-b91f381405f8)
 
