Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -72,4 +72,10 @@ local:
 2.creat a brower to connet localhost:8888  
 3.input the token shown in the remote connection  
 
+## trouble shooting
+from caffe2 import workspace, it shows an undefined symbol of protobuf. It's a version issue.    
+```
+conda list
+conda remove libprotobuf
+```
 
