Saved 2018-12-05-misc.md with Dillinger.io

--- a/_posts/2018-12-05-misc.md
+++ b/_posts/2018-12-05-misc.md
@@ -7,3 +7,7 @@ author  : "pshung"
 ## Computer MISC.
 
 # [Basic Data structure](http://alrightchiu.github.io/SecondRound/)
+
+# Python linear programing 
+[PULP](https://pythonhosted.org/PuLP/)
+[example](https://github.com/benalexkeen/Introduction-to-linear-programming)
