Saved 2018-12-05-misc.md with Dillinger.io

--- a/_posts/2018-12-05-misc.md
+++ b/_posts/2018-12-05-misc.md
@@ -11,3 +11,6 @@ author  : "pshung"
 # Python linear programing 
 [PULP](https://pythonhosted.org/PuLP/)
 [example](https://github.com/benalexkeen/Introduction-to-linear-programming)
+
+# Solve running error message "cannot open shared object file"
+set LD_LIBRARY_PATH, see [reference](http://blog.crboy.net/2012/05/solution-for-cannot-open-shared-object.html)
