Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -4,6 +4,16 @@ title   : "AI"
 date    : 2018-10-26
 author  : "pshung"
 ---
+
+## 2019-03-11
+[Google colab](https://colab.research.google.com/notebooks/welcome.ipynb#recent=true)
+An environment for developing AI. Using jupyter-like web environment.
+
+[Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning](https://www.coursera.org/learn/introduction-tensorflow/home/welcome)
+An online course to introduce Tensorflow.
+
+
+
 ## 2018-12-06
 [Grouped convolution](https://blog.yani.io/filter-group-tutorial/)
 Divide number of channel into N groups, perform convoltuion on individual group, then concantnate the result.  
