Saved 2018-12-05-AI.md with Dillinger.io

--- a/_posts/2018-12-05-AI.md
+++ b/_posts/2018-12-05-AI.md
@@ -4,6 +4,14 @@ title   : "AI"
 date    : 2018-10-26
 author  : "pshung"
 ---
+# 2019-03-14
+* Weight regularization
+* Dropout
+
+## 2019-03-13
+Seedbank: store AI examples written in colab.
+Occam's razor: 在選擇兩個具有同樣解釋力的方法下, 選擇越少不必要假設的那個簡單方法往往是具有最大解釋能力的.
+weight regularization. 
 
 ## 2019-03-11
 [Google colab](https://colab.research.google.com/notebooks/welcome.ipynb#recent=true)
